# yabasi

./: .gitignore  LICENSE  Makefile  README.rst  bas.py  pyproject.toml  setup.py  tokenizer.py
test/: asm.py  math.asm  test_yabasi.py
test/images/: canvas_arc.img  canvas_dot.img  canvas_get.txt  canvas_input.txt  canvas_line.img  canvas_put.img  canvas_text.img
yabasi/: bas.py  mbf.py  tokenizer.py
