#!/usr/bin/env python3
# Copyright (C) 2024 Dr. Ralf Schlatterbeck Open Source Consulting.
# Reichergasse 131, A-3411 Weidling.
# Web: http://www.runtux.com Email: office@runtux.com
# All rights reserved
# ****************************************************************************
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
#   The above copyright notice and this permission notice shall be included in
#   all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# ****************************************************************************

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "yabasi"
dynamic         = ["version"]
authors         = [{ name="Ralf Schlatterbeck", email="rsc@runtux.com" }, ]
description     = "Minimal BASIC interpreter for running MININEC"
readme          = "README.rst"
license         = {text = "MIT License"}
requires-python = '>=3.11'
dependencies    = ['numpy', 'ply']
classifiers     = [
          'Development Status :: 4 - Beta'
        , 'License :: OSI Approved :: MIT License'
        , 'Operating System :: OS Independent'
        , 'Intended Audience :: Science/Research'
        , 'Intended Audience :: Other Audience'
        , 'Topic :: Communications :: Ham Radio'
        , 'Programming Language :: Python'
        , 'Programming Language :: Python :: 3.11'
        , 'Programming Language :: Python :: 3.12'
        ]

[project.urls]
"Homepage" = "https://github.com/schlatterbeck/yabasi"
"Bug Tracker" = "https://github.com/schlatterbeck/yabasi/issues"

[project.scripts]
yabasi = 'yabasi.bas:main'

[tool.setuptools.dynamic]
version = {file = "VERSION"}
